tests/negative/test_decl_glob_unty_bad_type.orb
let bool x = 'a';

fnc main() {}